--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -55,17 +55,13 @@ a, a:hover, a:focus {
 }
 
 .bs-side .panel-collapse {
-    border-color: #7cabd4;
 }
 
 .bs-side .panel-body {
-    padding:0px;
+    padding:0;
 }
 
 .bs-side .panel-heading {
-    border-color: #7cabd4;
-    background-color: #bbb;
-    color: #333;
 }
 
 .teaser-item {
@@ -124,7 +120,6 @@ a, a:hover, a:focus {
 .bs-sidenav {
     padding-top:    10px;
     padding-bottom: 10px;
-    background-color: #bbb;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -132,26 +127,10 @@ a, a:hover, a:focus {
 /* All levels of nav */
 .bs-sidebar .nav > li > a {
     display: block;
-    color: #333;
     padding: 5px 15px;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-style:bold;
-    border-right: 1px solid transparent;
-}
-.bs-sidebar .nav > li > a:hover,
-.bs-sidebar .nav > li > a:focus {
-    text-decoration: none;
-    background-color: #ccc;
-    border-right: 1px solid #357ebd;
-}
-.bs-sidebar .nav > .active > a,
-.bs-sidebar .nav > .active:hover > a,
-.bs-sidebar .nav > .active:focus > a {
     font-weight: bold;
-    color: #555555;
-    background-color: transparent;
-    border-right: 1px solid #357ebd;
 }
 
 .bs-sidebar .nav-pills>li>a {
@@ -168,6 +147,23 @@ a, a:hover, a:focus {
     padding-bottom: 3px;
     padding-left: 25px;
     font-size: 90%;
+    font-weight: normal;
+}
+
+#sidebar.affix {
+    position: fixed;
+    top: 80px;
+    /* When the sidebar content gets too long for the screen */
+    max-height: 85%;
+    overflow-y: auto;
+}
+#sidebar.affix-bottom {
+    width: inherit;
+    position: absolute;
+    top: auto;
+    bottom: 0;
+}
+#sidebar.affix-top {
 }
 
 /* Show and affix the side nav when space allows it */
@@ -176,7 +172,7 @@ a, a:hover, a:focus {
         display: block;
     }
     /* Widen the fixed sidebar */
-    #sidebar {
+    #sidebar.affix {
         width: 213px;
     }
 
@@ -186,8 +182,16 @@ a, a:hover, a:focus {
 }
 @media (min-width: 1200px) {
     /* Widen the fixed sidebar again */
-    #sidebar {
+    #sidebar.affix {
         width: 263px;
+    }
+}
+@media (max-width: 992px) {
+    #sidebar.affix {
+        width: inherit;
+        position: inherit;
+        top: auto;
+        max-height: none;
     }
 }
 
@@ -361,23 +365,6 @@ p {
 .apiMethod .example {
     margin-left: 5px;
     color: #9E9E9E;
-}
-
-.affix {
-    width: inherit;
-    position: fixed;
-    top: 80px;
-    /* When the sidebar content gets too long for the screen */
-    max-height: 85%;
-    overflow-y: auto;
-}
-.affix-bottom {
-    width: inherit;
-    position: absolute;
-    top: auto;
-    bottom: 0;
-}
-.affix-top {
 }
 
 footer {
