--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<div class="navbar navbar-default navbar-fixed-top">
+<div id="menu" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><img height="20" width="74" src="/img/piwik-logo.png"/></a>
+            <a class="navbar-brand hidden-sm" href="/"><img height="20" width="74" src="/img/piwik-logo.png"/></a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
