Improved the colors for the sidebar

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -56,12 +56,13 @@ a, a:hover, a:focus {
 
 .bs-side .panel-collapse {
 }
-
 .bs-side .panel-body {
     padding:0;
 }
-
 .bs-side .panel-heading {
+}
+.panel-body a, .panel-body a:hover, .panel-body a:focus {
+    color: #2c3e50;
 }
 
 .teaser-item {
