--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -45,7 +45,7 @@
                     </div>
                 {% endif %}
                 {% if sections|length %}
-                    <div class="panel panel-success">
+                    <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#sidebar" href="#collapseTwo">
