--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -28,9 +28,11 @@
             <ul class="nav navbar-nav">
                 <li {% if isHome is defined and isHome %} class="active"{% endif %}><a href="/">Home</a></li>
                 {% for item in menu %}
-                    <li {% if activeMenu == item.title %} class="active"{% endif %}>
-                        <a href="{{ item.url }}">{{ item.title }}</a>
-                    </li>
+                    {% if item.mainMenu %}
+                        <li {% if activeMenu == item.title %} class="active"{% endif %}>
+                            <a href="{{ item.url }}">{{ item.title }}</a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
             <ul class="nav navbar-nav pull-right">
