Refactored into Integrate, Develop, Design + refactored the engine

--- a/app/templates/apireference.twig
+++ b/app/templates/apireference.twig
@@ -1,6 +1,6 @@
 {% set title = 'API Reference' %}
 
-{% extends 'layout/base.twig' %}
+{% extends 'base.twig' %}
 {% from "macros.twig" import teaser_list, categorized_teaser_list %}
 
 {% block headline %}
