--- a/app/templates/documentation.twig
+++ b/app/templates/documentation.twig
@@ -1,4 +1,4 @@
-{% extends 'layout/base.twig' %}
+{% extends 'base.twig' %}
 {% from "macros.twig" import teaser_list, categorized_teaser_list %}
 
 {% block headline %}
