--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -137,6 +137,10 @@ a, a:hover, a:focus {
 .bs-sidebar .nav-pills > li > a {
     border-radius: 0;
 }
+.nav-pills li.active>a, .nav-pills li.active>a:hover, .nav-pills li.active>a:focus {
+    color: #ffffff;
+    background-color: #2c3e50;
+}
 
 /* Nav: second level (shown on .active) */
 #sidebar .bs-sidebar .nav .nav {
