--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -22,7 +22,8 @@
                             <div class="bs-sidebar">
                                 <ul class="nav nav-pills nav-stacked bs-sidenav">
                                     {% for item in category.items %}
-                                        <li title="{{ item.title|raw }}">
+                                        {% set menuClass = (guide.title == item.menuTitle) ? 'active' : '' %}
+                                        <li class="{{ menuClass }}" title="{{ item.title|raw }}">
                                             {% if item.menuUrl %}
                                                 <a href="{{ item.menuUrl }}">{{ item.menuTitle }}</a>
                                             {% else %}
@@ -31,7 +32,8 @@
 
                                             <ul class="nav">
                                               {% for subItem in item.subItems %}
-                                                  <li title="{{ subItem.title|raw }}">
+                                                  {% set menuClass = (guide.title == subItem.menuTitle) ? 'active' : '' %}
+                                                  <li class="{{ menuClass }}" title="{{ subItem.title|raw }}">
                                                       <a href="{{ subItem.menuUrl }}"> {{ subItem.menuTitle }}</a>
                                                   </li>
                                               {% endfor %}
