--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -9,6 +9,7 @@
         <div class="col-md-3 bs-side">
 
             <div class="panel-group">
+
                 {% if category.items|length %}
                     <div class="panel panel-primary">
                         <div class="panel-heading">
@@ -23,7 +24,7 @@
                                 <ul class="nav nav-pills nav-stacked bs-sidenav">
                                     {% for item in category.items %}
                                         {% set menuClass = (guide.title == item.menuTitle) ? 'active' : '' %}
-                                        <li class="{{ menuClass }}" title="{{ item.title|raw }}">
+                                        <li class="{{ menuClass }}" title="{{ item.menuTitle|raw }}">
                                             {% if item.menuUrl %}
                                                 <a href="{{ item.menuUrl }}">{{ item.menuTitle }}</a>
                                             {% else %}
@@ -45,8 +46,9 @@
                         </div>
                     </div>
                 {% endif %}
+
                 {% if guide.sections|length %}
-                    <div class="panel panel-default">
+                    <div class="guide-sections panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 {{ guide.title|striptags|raw }}
@@ -76,6 +78,7 @@
                         </div>
                     </div>
                 {% endif %}
+
             </div>
         </div>
 
