--- a/generator/template/macros.twig
+++ b/generator/template/macros.twig
@@ -60,37 +60,19 @@ class
 {% elseif "method" == type %}
 {% if member.parameters %}
 -  It accepts the following parameter(s):
-
-   <ul>
 {% for parameter in member.getParameters %}
-   <li>
-      <div markdown="1" class="parameter">
-      `${{ parameter.name }}`{% if parameter.hint %} ({% for hint in parameter.hint %}{{ _self.hint(hint) }}{% if not loop.last %}|{% endif %}{% endfor %}) &mdash;{% endif %}
+    - `${{ parameter.name }}`{% if parameter.hint %} ({% for hint in parameter.hint %}{{ _self.hint(hint) }}{% if not loop.last %}|{% endif %}{% endfor %}) &mdash;{% endif %}
 
+      {% if parameter.shortDesc is defined and parameter.shortDesc %} {{ parameter.shortDesc|inlinelinkparser(class)|raw }}{% endif %}{% if parameter.shortDesc is defined and parameter.longDesc %} {{ parameter.longDesc|inlinelinkparser(class)|raw }}{% endif %}
 
-      <div markdown="1" class="param-desc">{% if parameter.shortDesc is defined and parameter.shortDesc %} {{ parameter.shortDesc|inlinelinkparser(class)|raw }}{% endif %}{% if parameter.shortDesc is defined and parameter.longDesc %} {{ parameter.longDesc|inlinelinkparser(class)|raw }}{% endif %}</div>
-
-      <div style="clear:both;"/>
-
-      </div>
-   </li>
 {% endfor %}
-   </ul>
 {% endif %}
 {% if member.name != '__construct' %}{% if (member.hint|length > 1) or member.hintDesc %}
 
-<ul>
-  <li>
-    <div markdown="1" class="parameter">
-    _Returns:_ {% if member.hint %} ({% for hint in member.hint %}{{ _self.hint(hint) }}{% if not loop.last %}|{% endif %}{% endfor %}) &mdash;{% endif %}
+- *Returns:* {% if member.hint %} {% for hint in member.hint %}{{ _self.hint(hint) }}{% if not loop.last %}|{% endif %}{% endfor %} &mdash;{% endif %}
 
-    <div markdown="1" class="param-desc">{% if member.hintDesc %}{{ member.hintDesc|inlinelinkparser(class)|raw }}{% endif %}</div>
+    {% if member.hintDesc %}{{ member.hintDesc|inlinelinkparser(class)|raw }}{% endif %}
 
-    <div style="clear:both;"/>
-
-    </div>
-  </li>
-</ul>
 {% elseif member.hint|length > 0 %}
 - It returns a {{ _self.hint(member.hint[0]) }} value.
 {% else %}
