--- a/generator/template/pages/index.twig
+++ b/generator/template/pages/index.twig
@@ -16,12 +16,12 @@
 {%- set type = element[0] %}
 {%set value = element[1] %}
 {% if 'class' == type and 'PiwikTracker' != value.shortname %}
-- {{ class_name(value, true) }}{% if has_namespaces %} &mdash; _Class in namespace_ {% if value.namespace in classes|keys %}[`{{ value.namespace }}`]({{ namespace_path(value.namespace)|replace({".html": ""}) }}){% else %}`{{ value.namespace }}`{% endif %} 
+- {{ class_name(value, true) }}{% if has_namespaces %} &mdash; *Class in namespace* {% if value.namespace in classes|keys %}[`{{ value.namespace }}`]({{ namespace_path(value.namespace)|replace({".html": ""}) }}){% else %}`{{ value.namespace }}`{% endif %}
 {% endif %}
 {% elseif 'method' == type and 'PiwikTracker' != value.class %}
-- [`{{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#{{ value.name|lower }}) &mdash; _Method in class_ {{ class_name(value.class, true) }}
+- [`{{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#{{ value.name|lower }}) &mdash; *Method in class* {{ class_name(value.class, true) }}
 {% elseif 'property' == type and 'PiwikTracker' != value.class %}
-- [`${{ value.name }}`]({{ markdown_path(class_path(value.class)) }}#${{ value.name|lower }}) &mdash; _Property in class_ {{ class_name(value.class, true) }}
+- [`${{ value.name }}`]({{ markdown_path(class_path(value.class)) }}#${{ value.name|lower }}) &mdash; *Property in class* {{ class_name(value.class, true) }}
 {% endif %}
 {% endfor %}
 {% endfor %}
