--- a/app/public/css/documentation.css
+++ b/app/public/css/documentation.css
@@ -45,3 +45,14 @@
     font-size: 15px;
     font-weight: bold;
 }
+
+.documentation .guide-navigation {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.documentation .guide-navigation-prev {
+    float:left;
+}
+.documentation .guide-navigation-next {
+    float:right;
+}
