Improved the display of the sidebars

--- a/app/public/css/sidebar.css
+++ b/app/public/css/sidebar.css
@@ -1,3 +1,7 @@
+.panel-group .panel {
+    margin-bottom: 20px;
+}
+
 /* Customize all "primary" panels */
 .panel-primary {
     border: 1px solid #d0d0d0;
