--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -6,11 +6,11 @@
 
     <div class="row">
 
-        <div class="col-md-3">
+        <div class="col-sm-4 col-md-3">
             {% include 'left-menu.twig' %}
         </div>
 
-        <div class="col-md-9 documentation">
+        <div class="col-sm-8 col-md-9 documentation">
 
             {{ guide.renderedContent|raw }}
 
