Tweaked the <code> color

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 code {
-    color: #767575;
+    color: #A93552;
     background-color: #f5f5f5;
     border-radius: 0;
 }
