--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -9,7 +9,7 @@
     <link href="/css/app.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/sidebar.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/documentation.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600&amp;subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet" type="text/css">
+    <link href="/css/open-sans.css?{{ revision|e('html_attr') }}" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
     <script src="/js/html5shiv.3.7.0.js?{{ revision|e('html_attr') }}"></script>
     <script src="/js/respond.min.1.3.0.js?{{ revision|e('html_attr') }}"></script>
