--- a/app/public/css/documentation.css
+++ b/app/public/css/documentation.css
@@ -22,6 +22,13 @@
 
 .documentation img {
     max-width: 100%;
+    border: 1px solid #d3d3d3;
+    border-radius: 4px;
+    padding: 5px;
+    background-color: #f9f9f9;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .documentation code {
